---------------------------------------------------------------------------------------------------
Version: 1.4.0

  Minor Features:
    - Add toggle/shortcut to pause all cameras.

---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 31-01-2021
  Bugfixes:
    - Fix crash due to script changing the settings.

---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 05-01-2021
  Features:
    - Updated to Factorio 1.1

---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 10-10-2020
  Minor Features:
    - Warn player(s) to enable camera on first (mod) start.
  Gui:
    - Make GUI more clear/consistent:
      - Use one sprite for a button (don't toggle on state anymore).
      - Use disabled sprite-buttons for disabled buttons (instead of regular sprites).
      - Hide some disabled buttons.
    - Refresh tracker list when deleting camera or remove tracker from camera to reflect changes.

---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 22-09-2020
  Minor Features:
    - Optionally show entity information in screenshots.

---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 08-09-2020
  Features:
    - Add Area Tracker
    - Choose between sequential or game tick numbering method for the screenshots.
  Gui:
    - Fix width of tracker tab.
  Bugfixes:
    - Fix crash when no entities are build but base camera is active.

---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 03-09-2020
  Bugfixes:
    - Update camera tracker list when name changes while game is paused.

---------------------------------------------------------------------------------------------------