@@ -50,6 +50,10 @@ script.on_event(defines.events.on_gui_checked_state_changed, TLBE.GUI.onStateCha
 script.on_event(defines.events.on_runtime_mod_setting_changed, TLBE.Config.reload)
 script.on_event(defines.events.on_player_created, on_player_created)
 script.on_event(defines.events.on_player_joined_game, on_player_created)
+script.on_event(defines.events.on_pre_surface_deleted, TLBE.GUI.onSurfaceChanged)
+script.on_event(defines.events.on_surface_created, TLBE.GUI.onSurfacesUpdated)
+script.on_event(defines.events.on_surface_imported, TLBE.GUI.onSurfacesUpdated)
+script.on_event(defines.events.on_surface_renamed, TLBE.GUI.onSurfaceChanged)
 script.on_event(defines.events.on_built_entity, TLBE.Main.entity_built)
 script.on_event(defines.events.on_rocket_launch_ordered, TLBE.Main.rocket_launch)
 script.on_event(defines.events.on_rocket_launched, TLBE.Main.rocket_launched)
