@@ -1,3 +1,4 @@
+camera-surface-deleted=Surface of camera '__1__' got deleted, camera will be disabled.
 max-zoom=Max zoom reached, increase image size (or make base smaller)
 migrated-camera=Migrated TLBE player settings to new camera settings.
 migration-issue-framerate=Could not recover 'frame rate', please set manually as soon as possible. (only rocket tracker will not work as before)
@@ -23,6 +24,7 @@ label-name=Name:
 label-position=Position:
 label-resolution=Resolution:
 label-size=Size:
+label-surface=Surface:
 label-smooth=Smooth camera movement
 label-speedgain=Speed gain:
 label-top-right=Top/Right:
