@@ -6,6 +6,7 @@ local lu = require("luaunit")
 require("utils")
 require("camera_follow-tracker")
 require("main")
+require("surface")
 require("tracker")
 require("tracker-base")
 require("tracker-player")
