@@ -9,7 +9,10 @@ local lu = require("luaunit")
 function TestTrackerPlayer()
     -- mock Factorio provided globals
     global = {}
-    game = {tick = 0}
+    game = {
+        tick = 0,
+        surfaces = {{}}
+    }
 
     -- mock TLBE tables
     global.playerSettings = {
