@@ -11,7 +11,10 @@ TestTrackerRocket = {}
 function TestTrackerRocket:SetUp()
     -- mock Factorio provided globals
     global = {}
-    game = {tick = 0}
+    game = {
+        tick = 0,
+        surfaces = {{}}
+    }
 
     -- mock TLBE tables
     global.playerSettings = {
